deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bns
  labels:
    app.kubernetes.io/managed-by: kubectl
